--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aptos": "^1.20.0",
     "axios": "^0.25.0",
+    "petra-plugin-wallet-adapter": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
